updated skills list

--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
                             <li class="list-items" data-aos="fade-left" data-aos-delay="500">
                                 <a href="#">Visual Studio Code</a>
                             </li>
+                            <li class="list-items" data-aos="fade-left" data-aos-delay="500">
+                                <a href="#">Postman</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="popular-post" id="popular">
